@@ -1,4 +1,5 @@
 {
+  "api": 2,
   "auth": "zef:tbrowder",
   "authors": [
     "Tom Browder"
